# simplemedia

./: CMakeLists.txt  LICENSE  README.md  binding.gyp  index.js  index.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: nodejs.yml
example/: example_audio_decoder.cc  example_audio_player.cc  example_player.cc  index.js  media_player.js
example/1_media_player/: index.js  package.json
example/2_audio_player/: audio_player.js  index.js  package.json
example/3_audio_frame/: index.js  package.json
example/4_audio_resample/: index.js  package.json
include/simplemedia/: audio_encoder.h  audio_renderer.h  encoder.h  frame_decoder.h  media_player.h  pid_channel.h  renderer.h  source.h  subtitle_renderer.h  timer.h  video_renderer.h
include/simplemedia/sdl/: sdl_subtitle_renderer.h  sdl_video_renderer.h
lib/: audio_player.js  decoder.ts  media_player.js  media_player.ts  renderer.ts  resampler.ts  source.ts  timer.js  timer.ts  window.ts
module/: FindFFmpeg.cmake  FindOpenAL.cmake  FindSDL2.cmake
native/: CMakeLists.txt
native/example/: example_audio_decoder.cc  example_audio_player.cc  example_player.cc
native/include/simplemedia/: audio_decoder.h  audio_encoder.h  audio_renderer.h  codec_param.h  config.h.in  decoder.h  encoder.h  frame_decoder.h  media_player.h  pid_channel.h  renderer.h  resampler.h  source.h  subtitle_decoder.h  subtitle_renderer.h  timer.h  types.h  video_decoder.h  video_encoder.h  video_renderer.h
native/include/simplemedia/sdl/: sdl_audio_renderer.h  sdl_subtitle_renderer.h  sdl_video_renderer.h
native/module/: FindJsoncpp.cmake  FindSimpleIO.cmake  FindSimpleThread.cmake  FindUriparser.cmake
native/src/: audio_decoder.cc  audio_encoder.cc  audio_renderer.cc  codec_param.cc  decoder.cc  encoder.cc  frame_decoder.cc  log_message.h  media_player.cc  packet_pool.cc  packet_pool.h  pid_channel.cc  resampler.cc  simple_thread.cc  simple_thread.h  source.cc  subtitle_decoder.cc  timer.cc  video_decoder.cc  video_encoder.cc
native/src/sdl/: sdl_audio_renderer.cc  sdl_subtitle_renderer.cc  sdl_video_renderer.cc
node/: index.js
node/lib/: audio_player.js  media_player.js
node/src/: addon.cc  audio_decoder_wrap.cc  audio_decoder_wrap.h  audio_renderer_wrap.cc  audio_renderer_wrap.h  source_wrap.cc  source_wrap.h  video_decoder_wrap.cc  video_decoder_wrap.h  video_renderer_wrap.cc  video_renderer_wrap.h  window_wrap.cc  window_wrap.h
node/tests/: play.js
script/: start
src/: addon.cc  audio_decoder.cc  audio_decoder_wrap.cc  audio_decoder_wrap.h  audio_encoder.cc  audio_renderer_wrap.cc  audio_renderer_wrap.h  decode_helper.h  decoder.cc  decoder_wrap.h  frame_wrap.cc  frame_wrap.h  log_message.h  media_player.cc  packet_pool.cc  pid_channel.cc  resampler_wrap.cc  resampler_wrap.h  simple_thread.cc  source.cc  source_wrap.cc  source_wrap.h  subtitle_decoder.cc  video_decoder_wrap.cc  video_decoder_wrap.h  video_renderer_wrap.cc  video_renderer_wrap.h  window_wrap.cc  window_wrap.h
src/sdl/: sdl_audio_renderer.cc  sdl_subtitle_renderer.cc  sdl_video_renderer.cc
test/: test.js
tests/: play.js
